tests/fixtures/invalid/dict_in_dict.py
# Cannot use 'in' with Dict[str, int] and Dict[str, int]
x: bool = {"a": 1} in {"a": 1}
